--- a/DataSDI/Add-On-View/Kelas NSTabView/SingleTableView.xib
+++ b/DataSDI/Add-On-View/Kelas NSTabView/SingleTableView.xib
@@ -10,13 +10,13 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <scrollView wantsLayer="YES" borderType="none" autohidesScrollers="YES" horizontalLineScroll="20" horizontalPageScroll="10" verticalLineScroll="20" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wsI-3J-0Hq">
-            <rect key="frame" x="0.0" y="0.0" width="762" height="350"/>
+            <rect key="frame" x="0.0" y="0.0" width="829" height="350"/>
             <clipView key="contentView" wantsLayer="YES" ambiguous="YES" id="FUC-7T-Rpa">
-                <rect key="frame" x="0.0" y="0.0" width="762" height="350"/>
+                <rect key="frame" x="0.0" y="0.0" width="829" height="350"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
                     <tableView wantsLayer="YES" verticalHuggingPriority="750" ambiguous="YES" allowsExpansionToolTips="YES" columnAutoresizingStyle="firstColumnOnly" columnSelection="YES" autosaveColumns="NO" rowHeight="18" rowSizeStyle="automatic" headerView="t8c-QG-tHg" viewBased="YES" id="RuK-p3-yqC">
-                        <rect key="frame" x="-1" y="0.0" width="762" height="284"/>
+                        <rect key="frame" x="-1" y="0.0" width="829" height="284"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <size key="intercellSpacing" width="3" height="2"/>
                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -119,6 +119,18 @@
                                 </textFieldCell>
                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                             </tableColumn>
+                            <tableColumn identifier="status" width="64" minWidth="10" maxWidth="3.4028234663852886e+38" id="3Be-i8-6aO">
+                                <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Status">
+                                    <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </tableHeaderCell>
+                                <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" alignment="left" title="Text Cell" id="eoG-MQ-4S9">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                                <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                            </tableColumn>
                             <tableColumn identifier="tgl" width="120" minWidth="50" maxWidth="130" id="Q7P-xe-gu5">
                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="Tanggal Dicatat">
                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -140,8 +152,8 @@
                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="700" id="oZJ-VN-UTK"/>
             </constraints>
             <edgeInsets key="contentInsets" left="0.0" right="0.0" top="38" bottom="0.0"/>
-            <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="0.016393442622950821" horizontal="YES" id="K4F-o3-jjm">
-                <rect key="frame" x="0.0" y="334" width="701" height="16"/>
+            <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="K4F-o3-jjm">
+                <rect key="frame" x="0.0" y="334" width="762" height="16"/>
                 <autoresizingMask key="autoresizingMask"/>
             </scroller>
             <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="nu5-w8-rTC">
@@ -149,7 +161,7 @@
                 <autoresizingMask key="autoresizingMask"/>
             </scroller>
             <tableHeaderView key="headerView" wantsLayer="YES" id="t8c-QG-tHg">
-                <rect key="frame" x="0.0" y="0.0" width="762" height="28"/>
+                <rect key="frame" x="0.0" y="0.0" width="829" height="28"/>
                 <autoresizingMask key="autoresizingMask"/>
             </tableHeaderView>
             <point key="canvasLocation" x="-205" y="-354"/>
