fix: init DatabaseController di AppDelegate dan Sidebar column sizing
- init DatabaseController.shared di AppDelegate.init() untuk menghindari race condition
- perbaikan NSOutlineView column sizing dari 'none' ke 'sequential' agar text menerapkan constraint

--- a/DataSDI/Main/SplitView Items/Sidebar.xib
+++ b/DataSDI/Main/SplitView Items/Sidebar.xib
@@ -25,7 +25,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="133" height="254"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" tableStyle="sourceList" selectionHighlightStyle="sourceList" columnReordering="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="28" rowSizeStyle="systemDefault" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="13" autosaveExpandedItems="YES" outlineTableColumn="J7H-Rk-2mg" id="XUb-QI-cZL" customClass="EditableOutlineView" customModule="DataSDI" customModuleProvider="target">
+                            <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="sequential" tableStyle="sourceList" selectionHighlightStyle="sourceList" columnReordering="NO" multipleSelection="NO" emptySelection="NO" autosaveColumns="NO" rowHeight="28" rowSizeStyle="systemDefault" viewBased="YES" floatsGroupRows="NO" indentationPerLevel="13" autosaveExpandedItems="YES" outlineTableColumn="J7H-Rk-2mg" id="XUb-QI-cZL" customClass="EditableOutlineView" customModule="DataSDI" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="133" height="254"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <size key="intercellSpacing" width="3" height="0.0"/>
